<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">FerecAuth</string>
    <string name="status_item_status_name">状態</string>
    <string name="status_item_status_description_stop">自動的に認証を行わない</string>
    <string name="status_item_status_description_start">自動的に認証を行う</string>
    <string name="status_item_manually_name">今すぐ認証</string>
    <string name="status_item_manually_description">接続状態に関わらず，認証を試みる</string>
    <string name="opmenu_preferences">設定</string>
    <string name="opmenu_aboutthis">情報</string>
    <string name="lunch_title">ようこそ</string>
    <string name="lunch_message">ご使用になる前に，[メニュー] - [設定]から初期設定を行なってください．</string>
    <string name="lunch_gopref">設定画面へ</string>
    <string name="lunch_later">後で</string>
    <string name="prefs_exec">実行</string>
    <string name="prefs_auth">認証</string>
    <string name="prefs_exec_autoauth_name">自動認証</string>
    <string name="prefs_exec_autoauth_description">対象の無線LANに接続すると同時に認証を行う</string>
    <string name="prefs_exec_autolunch_name">自動起動</string>
    <string name="prefs_exec_autolunch_description">端末起動時に自動起動する</string>
    <string name="prefs_exec_keepsession_name">定期的にWebアクセス</string>
    <string name="prefs_exec_keepsession_description">定期的にWebアクセスを行い，ログイン状態を維持する</string>
    <string name="prefs_exec_keepspan_name">Webアクセスを行う間隔</string>
    <string name="prefs_exec_keepspan_description">N分に1回Webアクセスを行う</string>
    <string name="prefs_auth_autoconfig_name">自動設定を試みる...</string>
    <string name="prefs_auth_autoconfig_description">ネットワーク環境の自動検出を開始する</string>
    <string name="prefs_auth_ssid_name">SSID</string>
    <string name="prefs_auth_ssid_description"></string>
    <string name="prefs_auth_username_name">ユーザ名</string>
    <string name="prefs_auth_username_description"></string>
    <string name="prefs_auth_password_name">パスワード</string>
    <string name="prefs_auth_password_description"></string>
    <string name="prefs_auth_uri_name">認証フォームのアドレス</string>
    <string name="prefs_auth_uri_description"></string>
    <string name="prefs_auth_hidden_name">隠しフィールド</string>
    <string name="prefs_auth_hidden_description"></string>
    <string name="dialog_autodetect_caution_msg1">ネットワークの自動検出を試みます．開始する前に，次のことを確認してください．</string>
    <string name="dialog_autodetect_caution_msg2">対象の無線LANアクセスポイントに接続済みである</string>
    <string name="dialog_autodetect_caution_msg3">ブラウザでの認証を行っていない（ログアウト状態である）</string>
    <string name="dialog_autodetect_caution_msg4">自動検出に失敗した場合は，手動で設定を行なってください．</string>
    <string name="dialog_autodetect_caution_start">開始</string>
    <string name="dialog_autodetect_caution_cancel">キャンセル</string>
    <string name="dialog_autodetect_account_description">ログインに必要なユーザ名とパスワードを入力してください．</string>
    <string name="dialog_autodetect_account_username">ユーザ名</string>
    <string name="dialog_autodetect_account_password">パスワード</string>
    <string name="dialog_autodetect_account_dotest">ログインテストを行う</string>
    <string name="dialog_autodetect_finish_success">自動検出が完了しました．検出された設定を保存しました．</string>
    <string name="dialog_autodetect_finish_fail_msgbase">自動検出に失敗しました．</string>
    <string name="dialog_autodetect_finish_fail_wifi">無線LANの接続状態を確認してください．</string>
    <string name="dialog_autodetect_finish_fail_ssid">無線LANの接続状態を確認してください．</string>
    <string name="dialog_autodetect_finish_fail_web_connectivity">ブラウザでのログインを行っていない（ログアウト状態である）ことを確認してください．</string>
    <string name="dialog_autodetect_finish_fail_auth">ユーザ名・パスワードが正しいことを確認してください．．</string>
    <string name="dialog_autodetect_finish_fail_unknown">手動で設定を行なってください．</string>
    <string name="dialog_about_website"><a href="http://be55.com/software/android/ferecauth">Website</a></string>
    <string name="dialog_about_github"><a href="http://github.com/yokamaru/">Sourcecode on Github (Pushing soon...)</a></string>
</resources>
