<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	android:orientation="vertical"
	android:padding="10dip"
	android:id="@+id/linearLayoutAlertCautionRoot">
	<TextView android:text="@string/dialog_autodetect_caution_msg1"
		android:layout_width="fill_parent" android:layout_height="wrap_content"></TextView>
	<LinearLayout android:layout_height="wrap_content"
		android:layout_width="fill_parent" android:orientation="horizontal"
		android:layout_marginLeft="10dip" android:layout_marginRight="10dip"
		android:layout_marginTop="10dip">
		<TextView android:text="-" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:layout_marginRight="6dip"></TextView>
		<TextView android:text="@string/dialog_autodetect_caution_msg2"
			android:layout_width="fill_parent" android:layout_height="wrap_content"></TextView>
	</LinearLayout>
	<LinearLayout android:layout_height="wrap_content"
		android:layout_width="fill_parent" android:orientation="horizontal"
		android:layout_marginLeft="10dip" android:layout_marginRight="10dip"
		android:layout_marginBottom="10dip">
		<TextView android:text="-" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:layout_marginRight="6dip"></TextView>
		<TextView android:text="@string/dialog_autodetect_caution_msg3"
			android:layout_width="fill_parent" android:layout_height="wrap_content"></TextView>
	</LinearLayout>
	<TextView android:text="@string/dialog_autodetect_caution_msg4"
		android:layout_width="fill_parent" android:layout_height="wrap_content"></TextView>
</LinearLayout>
