<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	android:id="@+id/linearLayoutAlertAccountRoot"
	android:orientation="vertical" 
	android:padding="10dip">
	<TextView android:text="@string/dialog_autodetect_account_description" android:layout_width="fill_parent" android:layout_height="wrap_content"></TextView>
	<TableLayout android:layout_height="fill_parent"
		android:layout_width="fill_parent" android:layout_marginTop="10dip">
		<TableRow android:layout_width="fill_parent"
			android:layout_height="wrap_content">
			<TextView android:text="@string/dialog_autodetect_account_username" android:layout_width="wrap_content"
				android:layout_height="wrap_content"></TextView>
			<EditText android:text="" android:id="@+id/editTextUserName"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:inputType="text" android:layout_weight="1"></EditText>
		</TableRow>
		<TableRow android:layout_width="fill_parent"
			android:layout_height="wrap_content">
			<TextView android:text="@string/dialog_autodetect_account_password" android:layout_width="wrap_content"
				android:layout_height="wrap_content"></TextView>
			<EditText android:id="@+id/editTextPassword" android:text="" android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:inputType="textPassword"
				android:layout_weight="1"></EditText>
		</TableRow>



	</TableLayout>
</LinearLayout>
